# stimdx

./: CMakeLists.txt  README.md  benchmark.py  demo.ipynb  pyproject.toml
cpp/include/stimdx/: executor.h
cpp/src/: bindings.cpp  executor.cpp
proto/: stimdx.proto
src/stimdx/: __init__.py  _cond.py  _context.py  _core.py  _execution.py  _expr.py  _jeff.py  _static_detectors.py  stimdx_pb2.py
tests/: conftest.py  test_classical_vars.py  test_context_proxy.py  test_detector_sampler.py  test_jeff.py  test_stimdx.py
