[project]
name = "stimdx"
version = "0.1.0"
description = "Dynamic circuits with stim"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jeff-format>=0.1.0.dev0",
    "pycapnp>=2.2.1",
    "stim>=1.15.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]
demo = [
    "ipykernel>=7.1.0",
    "pip>=25.3",
    "qldpc>=0.2.6",
    "rich>=14.2.0",
]
